--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -49,7 +49,7 @@
     "abortcontroller-polyfill": "1.7.3",
     "debug": "4.3.3",
     "lodash": "4.17.21",
-    "@adobe/node-fetch-retry": "2.2.0",
+    "got": "11.8.3",
     "request": "2.88.0",
     "undici": "4.15.0"
   },
