--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -26,12 +26,12 @@
     "verdaccio"
   ],
   "engines": {
-    "node": ">=14",
+    "node": ">=16",
     "npm": ">=6"
   },
   "scripts": {
     "clean": "rimraf ./build",
-    "test": "cross-env NODE_ENV=test BABEL_ENV=test jest",
+    "test": "cross-env NODE_ENV=test DEBUG=verdaccio*,nock.* jest",
     "type-check": "tsc --noEmit -p tsconfig.build.json",
     "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
     "build:js": "babel src/ --out-dir build/ --copy-files --extensions \".ts,.tsx\" --source-maps",
