--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "clean": "rimraf ./build",
-    "test": "cross-env NODE_ENV=test DEBUG=verdaccio*,nock.* jest",
+    "test": "cross-env NODE_ENV=test jest",
     "type-check": "tsc --noEmit -p tsconfig.build.json",
     "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
     "build:js": "babel src/ --out-dir build/ --copy-files --extensions \".ts,.tsx\" --source-maps",
