--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -46,10 +46,10 @@
     "@verdaccio/streams": "workspace:11.0.0-6-next.5",
     "@verdaccio/utils": "workspace:6.0.0-6-next.11",
     "JSONStream": "1.3.5",
-    "abortcontroller-polyfill": "1.7.3",
     "debug": "4.3.3",
     "lodash": "4.17.21",
     "got": "11.8.3",
+    "proxy-agent": "5.0.0",
     "request": "2.88.0",
     "undici": "4.15.0"
   },
