--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -45,6 +45,7 @@
     "@verdaccio/local-storage": "workspace:11.0.0-6-next.12",
     "@verdaccio/logger": "workspace:6.0.0-6-next.11",
     "@verdaccio/proxy": "workspace:6.0.0-6-next.20",
+    "@verdaccio/url": "workspace:11.0.0-6-next.9",
     "@verdaccio/streams": "workspace:11.0.0-6-next.5",
     "@verdaccio/utils": "workspace:6.0.0-6-next.11",
     "@verdaccio/tarball": "workspace:11.0.0-6-next.12",
