--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -49,7 +49,7 @@
     "debug": "4.3.3",
     "lodash": "4.17.21",
     "got": "11.8.3",
-    "proxy-agent": "5.0.0",
+    "hpagent": "1.0.0",
     "request": "2.88.0",
     "undici": "4.15.0"
   },
